2003-07-17  Derek Price  <derek@ximbiot.com>

	* configure.in: Use gl_FUNC_GETNLINE rather than the obsolete
	gl_PREREQ_GETNLINE,

	* aclocal.m4: Regenerated.
	* config.h.in: Ditto.
	* configure: Ditto.

2003-07-17  Derek Price  <derek@ximbiot.com>

	* aclocal.m4: Regenerated.
	* configure: Ditto.

2003-07-16  Derek Price  <derek@ximbiot.com>

	* configure.in: Call gl_PATHMAX, not gl_PATH_MAX.

	* config.h.in: Regenerated.
	* configure: Ditto.

2003-07-16  Derek Price  <derek@ximbiot.com>

	* configure.in: Remove AC_C_PROTOTYPES call.

	* config.h.in: Regenerated.
	* configure: Ditto.

2003-07-16  Derek Price  <derek@ximbiot.com>

	* configure.in: Add calls to new pathmax macro.

	* aclocal.m4: Regenerated.
	* config.h.in: Ditto.
	* configure: Ditto.

2003-07-16  Derek Price  <derek@ximbiot.com>

	* configure.in: Add calls to new getline & getnline macros.

	* aclocal.m4: Regenerated.
	* config.h.in: Ditto.
	* configure: Ditto.

2003-07-15  Derek Price  <derek@ximbiot.com>

	* aclocal.m4: Regenerated.
	* configure: Ditto.

2003-06-27  Larry Jones  <lawrence.jones@eds.com>

	* NEWS: Note LockDir fix.

2003-06-23  Derek Price  <derek@ximbiot.com>

	* configure.in: Debian Woody has -lkrb4, so check for that.
	(Patch from Alexey Mahotkin <alexm@hsys.msk.ru>.)

	* config.h.in: Regenerated.
	* configure: Ditto.

2003-06-23  Derek Price  <derek@ximbiot.com>

	* INSTALL: Add some OS X platforms to the compile list. Correct link to
	cvsgui.org -> wincvs.org.

2003-06-20  Derek Price  <derek@ximbiot.com>

	* configure.in: Compile kerberos4-client.[ch] if needed.
	(Patch from Alexey Mahotkin <alexm@hsys.msk.ru>.)

	* configure: Regenerated.

2003-06-14  Derek Price  <derek@ximbiot.com>

	* aclocal.m4: Regenerated.
	* configure: Ditto.

2003-06-13  Derek Price  <derek@ximbiot.com>

	* configure.in: Call UTILS_FUNC_MKSTEMP for lib/mkstemp.c.

	* aclocal.m4: Regenerated.
	* configure: Ditto.
	* config.h.in: Ditto.

2003-06-13  Derek Price  <derek@ximbiot.com>
