@@ -208,7 +208,7 @@ AC_REPLACE_FUNCS(\
 # Look for functions from GNULIB and replace with versions in lib/ when
 # necessary.
 gl_PATHMAX
-gl_FUNC_GETNLINE
+gl_GETNLINE
 jm_FUNC_MALLOC
 jm_FUNC_REALLOC
 jm_FUNC_STAT
